remove align-self property from .card-back-btn as it was causing a js toggle is-flipped issue

--- a/style.css
+++ b/style.css
@@ -212,25 +212,6 @@ body {
 /* .card-back-btn some properties can probably be removed - card having flex is causing button to be centered */
 
 .card-back-btn {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: #FFF;
-  background-color: var(--color1);
-  border: none;
-  width: 42px; /* +10px increased width and height compared to figma design */
-  height: 42px;
-  border-radius: 100%;
-  font-size: 28px;
-  font-weight: 800;
-  margin: 20px 0 0 20px;
-  align-self: flex-start;
-  padding: 0; /* resets default / user agent btn padding affecting computed size */
-  /* position: relative; */
-  /* z-index: 100; */
-}
-
-.test-btn {
   color: #FFF;
   background-color: var(--color1);
   border: none;
@@ -241,7 +222,9 @@ body {
   font-weight: 800;
   margin: 20px 0 0 20px;
   padding: 0; /* resets default / user agent btn padding affecting computed size */
-  align-self: flex-start;
+  /* align-self: flex-start; */ /* THIS PROPERTY WAS AFFECTING JS FLIP FUNCTION */
+  position: absolute; /* used instead of align self */
+  left: 5px;
 }
 
 .barcode-wrapper img {
@@ -250,6 +233,7 @@ body {
   border: 0.95px solid #F2F2F2;
   border-radius: 7px;
   box-shadow: 3.4688737392425537px 3.4688737392425537px 10.406620979309082px 0px #00000012; /*refactor by rounding ?? */
+  margin-top: 45px; /* due to .card-back-btn been position absolute this helps to position rest of rear card content */
   margin-bottom: 12px;
 }
 
